--- a/StorhaugenWebsite/Pages/AddFood.razor
+++ b/StorhaugenWebsite/Pages/AddFood.razor
@@ -1,4 +1,5 @@
 @page "/add"
+@using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Forms
 @using StorhaugenWebsite.Models
 @using StorhaugenWebsite.Services
@@ -8,6 +9,7 @@
 @inject NavigationManager Navigation
 @inject ISnackbar Snackbar
 @inject IOcrService OcrService
+@attribute [Authorize]
 
 @if (!HouseholdState.HasHousehold)
 {
@@ -160,7 +162,6 @@ else
         </p>
     </div>
 
-    @* ... (Rest of the Razor file remains the same: Rating, Visibility, Submit Button) ... *@
     <div class="form-section">
         <p class="form-section-title">Din vurdering</p>
         <div class="rating-member-card">
@@ -268,16 +269,6 @@ else
 
     protected override async Task OnInitializedAsync()
     {
-        if (!AuthService.IsAuthorized)
-        {
-            await AuthService.InitializeAsync();
-            if (!AuthService.IsAuthorized)
-            {
-                Navigation.NavigateTo("login");
-                return;
-            }
-        }
-
         await HouseholdState.InitializeAsync();
 
         if (HouseholdState.HasHousehold)
