--- a/StorhaugenWebsite/Pages/HouseholdsBrowser.razor
+++ b/StorhaugenWebsite/Pages/HouseholdsBrowser.razor
@@ -1,4 +1,5 @@
 ﻿@page "/households"
+@using Microsoft.AspNetCore.Authorization
 @using StorhaugenWebsite.ApiClient
 @using StorhaugenWebsite.DTOs
 @using StorhaugenWebsite.Models
@@ -9,6 +10,7 @@
 @inject ISnackbar Snackbar
 @inject IDialogService DialogService
 @inject IJSRuntime JSRuntime
+@attribute [Authorize]
 
 <div class="d-flex align-center gap-3 mb-4">
     <h1 class="page-title" style="margin-bottom: 0; font-size: 1.5rem;">Husstander</h1>
@@ -337,8 +339,6 @@ else
 
     protected override async Task OnInitializedAsync()
     {
-        if (!AuthService.IsAuthorized) return;
-
         await HouseholdState.InitializeAsync();
         
         try 
